--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>CV/Resume</title>
     <link href="css/bootstrap.css" rel="stylesheet"/>
-    
+    <link href="cv.css" rel="stylesheet"/>
     <script src="js/bootstrap.js"></script> 
        
 </head>
@@ -11,11 +11,11 @@
     <div class="container m-4">
         <div class="row">
           <div class="col">
-           <b> Priti Modanwal</b><br>
-           <b> Address: </b>222127 Baderi Bazar ,Mariyahu ,Jaunpur 
+           <b class="a"> Priti Modanwal</b><br>
+           <b class="a"> Address: </b>222127 Baderi Bazar ,Mariyahu ,Jaunpur 
             U.P <br>
-           <b> Mobile no:</b> 9336347836, 9918247460 <br>
-            <b>Email ID: </b>pritivns612@gmail.com
+           <b class="a"> Mobile no:</b> 9336347836, 9918247460 <br>
+            <b class="a">Email ID: </b>pritivns612@gmail.com
           </div>
           <div class="col"></div>
           <div class="col">
@@ -25,14 +25,14 @@
         </div>
         <hr>
               <!-----------------objective------------------->
-              <b> CAREER OBJECTIVE: </b>
+              <b class="a"> CAREER OBJECTIVE: </b>
               <p> To learn information, technology, and ready to utilize my skills and always best further goals 
                 and professional development skills and ready for smart work for your company. Looking for opportunities to 
                 incorporates my skills and training helps the company grow. 
                 </p>
 
         <!------------------table------------------->
-        <b> SUMMER TRAINING/Internship:</b>
+        <b class="a"> SUMMER TRAINING/Internship:</b>
         <table class="table">
           <thead class="table-primary">
             <tr>
@@ -69,7 +69,7 @@
           </tbody>
         </table>
         <!-----------------------Qualification----------------------->
-       <b> ACADEMIC QUALIFICATION:</b>
+       <b class="a"> ACADEMIC QUALIFICATION:</b>
        <table class="table">
         <thead class="table-primary">
           <tr>
@@ -111,7 +111,7 @@
         </tbody>
       </table>
       <!-------------------Additiional certificate------------------->
-     <b> Additional Certificate: </b>
+     <b class="a"> Additional Certificate: </b>
      <table class="table">
       <thead class="table-primary">
         <tr>
@@ -150,7 +150,7 @@
       </tbody>
     </table>
     <!-------------Skill Updation---------------------->
-    <b>SKILL UPGRADATION:</b>
+    <b class="a">SKILL UPGRADATION:</b>
     <table class="table">
   <thead class="table-primary">
         <tr>
@@ -192,7 +192,7 @@
         </tr> 
     </table>
 <!--------------Hobby------------------>
-<b>PERSONAL INFORMATION:</b>
+<b class="a">PERSONAL INFORMATION:</b>
         <table class="table">
           <thead class="table-primary">
             <tr>
