--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume</title>
   <script src="https://unpkg.com/feather-icons"></script>
-  <link rel="stylesheet" href="Resume.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
